src/test/resources/de/monticore/umlcd4a/cocos/ebnf/valid/U0447.cd
package de.monticore.umlcd4a.cocos.ebnf.valid;

classdiagram U0447 {
  class C1 {
    int c = 1;
  }  
}