src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/c4A01.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram c4A01 {

}